<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imagenAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imagenAdd">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/lbNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbNombre"
                    android:textSize="18sp"
                    android:layout_below="@+id/imagenAdd"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etNombreA"
                    android:layout_below="@+id/lbNombre"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/lbTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbTelefono"
                    android:textSize="18sp"
                    android:layout_below="@+id/etNombreA"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="320dp"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/etTelefonoA"
                        android:layout_below="@+id/lbTelefono"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/btAddFotoA"
                        android:layout_toStartOf="@+id/btAddFotoA"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="51dp"
                        android:layout_height="match_parent"
                        android:id="@+id/btAddTelefonoA"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_above="@+id/lbDireccion"
                        android:layout_toRightOf="@+id/imagenAdd"
                        android:layout_toEndOf="@+id/imagenAdd" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/lbDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbDireccion"
                    android:textSize="18sp"
                    android:layout_below="@+id/etTelefonoA"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etDireccionA"
                    android:layout_below="@+id/lbDireccion"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/lbEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbEmail"
                    android:textSize="18sp"
                    android:layout_below="@+id/etDireccionA"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/etEmailA"
                    android:layout_below="@+id/lbEmail"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/lbPagina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbPagina"
                    android:textSize="18sp"
                    android:layout_below="@+id/etEmailA"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etPaginaA"
                    android:layout_below="@+id/lbPagina"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/lbFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbFoto"
                    android:textSize="18sp"
                    android:layout_below="@+id/etPaginaA"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="320dp"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/etFotoA"
                        android:layout_below="@+id/lbTelefono"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/btAddFotoA"
                        android:layout_toStartOf="@+id/btAddFotoA"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="51dp"
                        android:layout_height="match_parent"
                        android:id="@+id/btAddFotoA"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_toRightOf="@+id/imagenAdd"
                        android:layout_toEndOf="@+id/imagenAdd" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1">

                <Button
                    android:text="@string/btAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btAlta"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/trash1"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/trash2"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/trash3"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>